# yardstick

./: .coveragerc  .gitignore  .gitreview  .pylintrc  .testr.conf  0001-Auto-create-ixia-config-based-on-the-traffic-profile.patch  Dockerfile  INFO  INFO.yaml  LICENSE.rst  README.rst  doc8.ini  ez_setup.py  infra_deploy.yml  infra_deploy_one.yaml.sample  install.sh  ixia_ipv4_latency_vbng-4.yaml  jenkins_checker.py  multinode.j2  nsb_setup.sh  requirements.txt  run_tests.sh  setup.cfg  setup.py  t  test-requirements.txt  test.yaml  tox.ini  upper-constraints.txt  virt_ci_rampup.sh
ansible/: ansible.cfg  baremetal_scale_out_ixia_correlated_test.yaml  baremetal_scale_out_ixia_correlated_test_templates.yml  build_cloudinit_iso_images.yml  build_vm.yml  build_yardstick_image.yml  check_openstack.yml  check_rs.yml  clean_images.yml  clone_repos.yml  cpu_pin_setup.yaml  cpu_pin_teardown.yaml  create_node_pod_yaml.yml  deploy_kube.yml  exec_tests.yml  file1  gen_scale_out_test.yml  infra_deploy.yml  install-inventory.ini  install.yaml  install_collectd.yml  install_dependencies.yml  install_tom.yaml  install_trex_local.yaml  install_trex_standalone.yml  install_yardstick.yml  inventory.ini  kube-inventory.ini  kube_deploy.yml  kube_install.yml  kube_prepare.yml  list_stacks.yml  load_images.yml  migrate_pinning_setup.yaml  migrate_pinning_teardown.yaml  migrate_setup.yaml  migrate_teardown.yaml  multi_port_baremetal_ixia_correlated_test.yaml  multi_port_baremetal_ixia_correlated_test_templates.yml  multi_port_baremetal_ixia_test.yaml  (+40 more)
api/: __init__.py  api-prepare.sh  base.py  (+6 more)
(+3547 files in other folders)
