[metadata]
name = yardstick
home-page = https://www.opnfv.org
version = 0.1.dev0

[files]
packages = yardstick
scripts =
    tools/yardstick-img-modify
    tools/yardstick-img-lxd-modify
    tools/yardstick-img-dpdk-modify
package-data =
    yardstick =
        benchmark/scenarios/availability/*.yaml
        benchmark/scenarios/availability/attacker/*.yaml
        benchmark/scenarios/availability/ha_tools/*.bash
        benchmark/scenarios/availability/ha_tools/*/*.bash
        benchmark/scenarios/availability/attacker/scripts/*.bash
        benchmark/scenarios/availability/monitor/*.yaml
        benchmark/scenarios/availability/monitor/script_tools/*.bash
        benchmark/scenarios/compute/*.bash
        benchmark/scenarios/networking/*.bash
        benchmark/scenarios/networking/*.txt
        benchmark/scenarios/parser/*.sh
        benchmark/scenarios/storage/*.bash
        network_services/nfvi/collectd.conf
        network_services/nfvi/collectd.sh
        resources/files/*
        resources/scripts/install/*.bash
        resources/scripts/remove/*.bash
        resources/templates/*.vat
    etc =
        yardstick/nodes/*/*.yaml
        yardstick/*.sample
    tests =
        opnfv/*/*.yaml
        ci/*.sh

[entry_points]
console_scripts =
    yardstick=yardstick.main:main
    yardstick-plot=yardstick.plot.plotter:main [plot]
yardstick.scenario =
